--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.transporteruser">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -11,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashScreen">
             <intent-filter>
@@ -25,6 +27,7 @@
         <activity android:name=".AboutUs" android:parentActivityName=".MainActivity"/>
         <activity android:name=".ContactUs" android:parentActivityName=".MainActivity"/>
         <activity android:name=".PrivacyPolicy" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".BidActivity" android:parentActivityName=".MainActivity"/>
 
     </application>
 
