--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logoeagle"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -30,7 +30,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
-        <activity android:name=".CreateNewLoadActivity" android:parentActivityName=".MainActivity"/>
+
         <activity android:name=".AboutUs" android:parentActivityName=".MainActivity"/>
         <activity android:name=".ContactUs" android:parentActivityName=".MainActivity"/>
         <activity android:name=".PrivacyPolicy" android:parentActivityName=".MainActivity"/>
@@ -38,6 +38,11 @@
         <activity android:name=".CreateProfileActivity"/>
         <activity android:name=".UpdateProfileActivity" android:parentActivityName=".MainActivity"/>
         <activity android:name=".ChatActivity"/>
+        <activity android:name=".HistoryActivity" android:parentActivityName=".UpdateProfileActivity"/>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
     </application>
 
